RESOLVED FIXED86513
[Chromium] CCTimer::isActive() is incorrect inside tick callback
https://bugs.webkit.org/show_bug.cgi?id=86513
Summary [Chromium] CCTimer::isActive() is incorrect inside tick callback
Daniel Sievers
Reported 2012-05-15 12:58:15 PDT
Need to move clearing of m_task to before calling onTimerFired()
Attachments
Patch (3.71 KB, patch)
2012-05-15 17:18 PDT, Tien-Ren Chen
no flags
Patch (3.22 KB, patch)
2012-05-15 17:21 PDT, Tien-Ren Chen
no flags
Tien-Ren Chen
Comment 1 2012-05-15 17:18:37 PDT
Tien-Ren Chen
Comment 2 2012-05-15 17:21:17 PDT
James Robinson
Comment 3 2012-05-15 17:24:19 PDT
Comment on attachment 142101 [details] Patch R=me
WebKit Review Bot
Comment 4 2012-05-15 21:07:06 PDT
Comment on attachment 142101 [details] Patch Clearing flags on attachment: 142101 Committed r117214: <http://trac.webkit.org/changeset/117214>
WebKit Review Bot
Comment 5 2012-05-15 21:07:12 PDT
All reviewed patches have been landed. Closing bug.
Nat Duca
Comment 6 2012-05-15 21:08:13 PDT
Thanks Tian-Ren! Very appreciated.
Note You need to log in before you can comment on or make changes to this bug.