[Chromium] CCTimer::isActive() is incorrect inside tick callback https://bugs.webkit.org/show_bug.cgi?id=86513

Source/WebCore:

This patch implements CCTimer::isActive() by clearing the task pointer
when the timer fires.

Patch by Tien-Ren Chen <trchen@chromium.org> on 2012-05-15
Reviewed by James Robinson.

No new tests. Existing tests updated accordingly.

* platform/graphics/chromium/cc/CCTimer.cpp:
(WebCore::CCTimerTask::performTask):
* rendering/RenderLayerBacking.cpp:

Source/WebKit/chromium:

Update test cases to verify CCTimer::isActive() values.

Patch by Tien-Ren Chen <trchen@chromium.org> on 2012-05-15
Reviewed by James Robinson.

* tests/CCTimerTest.cpp:
(WebKitTests::TEST_F):

Canonical link: https://commits.webkit.org/104149@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117214 268f45cc-cd09-0410-ab3c-d52691b4dbfc